@@ -25,4 +25,6 @@ a.out.dSYM/.*
 \.tu
 explorations/.*\.png
 explorations/globalString
+src/Rllc.cpp
+src/llc.cpp
 
