@@ -33,3 +33,4 @@ Collate: llvmVersion.R classDefs.R manual_generics.R BinaryOpEnums.R Function.R 
          ostream.R targetMachine.R
          metadata.R
          opCodeClassMap.R
+         classof.R initialize.R
