@@ -1,0 +1,16 @@
+InitializeAllTargets =
+  function()
+    .Call("R_InitializeAllTargets")
+
+InitializeAllTargetMCs =
+  function()
+    .Call("R_InitializeAllTargetMCs")
+
+InitializeAllAsmPrinters =
+  function()
+    .Call("R_InitializeAllAsmPrinters")
+
+InitializeAllAsmParsers =
+  function()
+    .Call("R_InitializeAllAsmParsers")
+
