@@ -6,12 +6,18 @@ function(filename)
 }
 
 formattedRawOstream =
-function(stream, delete = FALSE)
+function(stream, delete = FALSE, finalize = TRUE)
 {
   if(is.character(stream))
     stream = rawFDOstream(stream)
 
-  .Call("R_new_formatted_raw_ostream", stream, as.logical(delete))
+  ans = .Call("R_new_formatted_raw_ostream", stream, as.logical(delete))
+
+  if(finalize)
+       # could allow the caller to specify their own routine for the finalizer.
+     .Call("R_setFinalizer_formatted_raw_ostream", ans@ref)
+  
+  ans
 }
 
 stringRawOstream =
@@ -19,3 +25,7 @@ function(value = "")
 {
    .Call("R_new_raw_string_ostream", as.character(value))
 }
+
+setAs("raw_string_ostream", "character",
+        function(from)
+          .Call("R_raw_string_ostream_str", from))
