@@ -43,6 +43,7 @@
 #include <llvm/Assembly/PrintModulePass.h>
 
 #include <llvm/IR/IRBuilder.h>
+#include <llvm/IR/CallingConv.h>
 
 #include <algorithm>
 
