@@ -1,3 +1,4 @@
+# This is an example of moving instructions around.
 library(Rllvm)
 m = Module()
 f = Function("foo", VoidType, list(x = DoubleType), module = m)
@@ -7,8 +8,8 @@ ir = IRBuilder(b)
 
 i = ir$createLocalVariable(Int32Type, "i")
 j = ir$createLocalVariable(Int32Type, "j")
-#ir$createStore(ir$createConstant(0L), i)
-#ir$createStore(ir$createConstant(0L, Int32Type), j)
+ir$createStore(ir$createConstant(0L), i)
+ir$createStore(ir$createConstant(0L, Int32Type), j)
 l1 = ir$createLoad(i)
 l2 = ir$createLoad(j)
 
