@@ -6,6 +6,8 @@ Version 0.6-0
 
 	*  insertBefore(), insertAfter(), moveBefore()
 
+	*  isa() for Instruction classes.
+
 Version 0.5-0
 
 	*  show() methods for Module, Function, Type to make the
